--- a/latex/introduction.tex
+++ b/latex/introduction.tex
@@ -9,7 +9,7 @@ Cependant, IzPack est un logiciel à part entière et nécessite un investisseme
 Il rencontre comme tous les logiciels, des problèmes incontournable : bugs, librairies obsolètes, problème de design, etc.
 De même, des nouvelles pratiques de programmation apparaissent alors que les anciennes montrent leurs limites.
 Pour résoudre ces problèmes, une pratique courante est de faire du refactoring sur l'application.
-Le refactoring consiste à retoucher le code, étapes par étapes, afin d'améliorer le design, la qualité et la maintenabilité du code sans ajouter de fonctionnalités et modifier la logique existante.
+Le refactoring consiste à retoucher le code, étape par étape, afin d'améliorer le design, la qualité et la maintenabilité du code sans ajouter de fonctionnalités et modifier la logique existante.
 
 Le refactoring peut-être considéré comme une perte de temps d'un point de vue extérieur car aucune nouvelle fonctionnalité et aucun travail visible par le client n'est réalisé.
 Cependant, cette pratique est indispensable pour assurer la pérennité de l'application.
@@ -18,7 +18,7 @@ Le refactoring permet de corriger la première implémentation réalisée et de 
 
 Toutefois, cette pratique est généralement peu appliquée à cause de l'absence d'intérêt à court terme.
 IzPack présente aujourd'hui des améliorations possibles réalisables grâce au refactoring, notamment dans la gestion des fichiers XML.
-En effet, il s'appuie sur NanoXml pour gérer ces fichiers, mais cette librairie entraîne un certain nombre de problèmes de part sa vétusté.
+En effet, il s'appuie sur NanoXML pour gérer ces fichiers, mais cette librairie entraîne un certain nombre de problèmes de part sa vétusté.
 Utiliser les librairies natives de java à la place régleraient ces problèmes.
 
 Dans le cadre de notre projet de troisième année à l'ISIMA, nous avons été chargé du refactoring de cette partie d'IzPack.
