--- a/latex/abstract.tex
+++ b/latex/abstract.tex
@@ -11,7 +11,7 @@ De plus, Java propose dans ses nouvelles versions une librairie native remplissa
 Cette opération de refactoring représente l'objectif de notre projet.
 Dans un premier temps, il nous a fallut étudier le fonctionnement d'IzPack et l'utilisation qui a été faite de NanoXML.
 Après quoi, aidé du gestionnaire de version \textbf{Git} et de l'environnement de développement \textbf{IntelliJ}, nous avons élaboré une solution basée sur le patron de conception adaptateur.
-Cette solution a été implémentée dans IzPack et sera présente pour la prochaine version de IzPack.
+Cette solution a été implémentée dans IzPack et sera présente dans la prochaine version de IzPack.
 ~\\
 ~\\
 Mots-clés : IzPack, installateur, logiciel libre, XML, Git, IntelliJ, refactoring
@@ -19,18 +19,18 @@ Mots-clés : IzPack, installateur, logiciel libre, XML, Git, IntelliJ, refactori
 \begin{center}\large{\textbf{Abstract}}\end{center}
 
 \textbf{IzPack} is an \textbf{open source software} dedicated to build custom \textbf{installer} for applications.
-Thus, it can reduce the developpment of applications by automating this process.
+Thus, it can reduce the development of applications by automating this process.
 However, IzPack has the same issues of all softwares and need \textbf{refactoring} phases.
 Those phases enhance the code quality and its maintainability.
 
 The replacement of a library is a part of refactoring actions.
-Several reasons can spur this change : a used library which is no longer developped or a more efficient one exists.
-This is the case of the \textbf{XML} library used by IzPack, NanoXML, which is no longer developped.
-Moreover, Java provides a XML library in its recent version, which make NanoXML superfluous.
+Several reasons can spur this change : a used library which is no longer developed or a more efficient one exists.
+This is the case of the \textbf{XML} library used by IzPack, NanoXML, which is no longer developed.
+Moreover, Java provides a XML library in its recent version, which make NanoXML pointless.
 
 Our project's objective is this refactoring operation.
-First we have studied how IzPack works and how it uses NanoXML.
-Then, helped by the source control management \textbf{Git} and by the integrated developpment environnement \textbf{IntelliJ}, we developped a solution based on the design pattern adapter.
-This solution has been merged with IzPack and will be in the next version of IzPack.
+First, we have studied how IzPack works and how it uses NanoXML.
+Then, helped by the version control manager \textbf{Git} and by the integrated development environnement \textbf{IntelliJ}, we developed a solution based on the adapter design pattern.
+This solution has been merged with IzPack and will be in its next version.
 
 Keywords : IzPack, installeur, open source software, XML, Git, IntelliJ, Refactoring
