--- a/latex/partie1.tex
+++ b/latex/partie1.tex
@@ -4,19 +4,18 @@ IzPack est un projet open-source créé en 2001 par Julien Ponge.
 C'est un générateur d'installateur et il présente à ce titre de nombreuses fonctionnalités.
 \subsection{Générateur d'installateur}
 Une application, une fois réalisée, nécessite un certain nombre d'opérations sur la machine pour être opérationnelle.
-Ces opérations vont de la décompression de l'archive dans un répertoire au lancement de scripts de configuration en passant par la validation de la licence et la création de raccourcis.
-Créer un installateur pour une application est souvent laborieux et chronophage mais nécessaire, étant donné qu'il apparaît comme le premier contact avec l'utilisateur et joue beaucoup sur son jugement.
+Ces opérations vont de la décompression de l'archive dans un répertoire, au lancement de scripts de configuration, en passant par la validation de la licence et la création de raccourcis.
+Créer un installateur pour une application est souvent laborieux et chronophage mais reste nécessaire étant donné qu'il apparaît comme le premier contact avec l'utilisateur et joue beaucoup sur son jugement.
 
 L'intérêt d'IzPack réside dans le fait qu'il propose une solution pour créer cet installateur de manière simple et universelle.
 En effet, à partir d'une application existante, IzPack est capable de générer un installateur pour cette application.
 Ce dernier pourra être utilisé pour déployer l'application sur n'importe quelle machine.
 De plus, tout type de programme peut être packagé, que ce soit une application C++ ou Java.
-IzPack se chargeant juste de la logique d'installation, il est totalement independant du contenu qu'il installe.
+IzPack se chargeant juste de la logique d'installation, il est totalement indépendant du contenu qu'il installe.
 
 \subsection{Open-source}
-Le projet IzPack est un projet open-source sous la fondation Codehaus.
-A ce titre, le code source est librement accessible selon les termes de la licence. De plus, une communauté s'est regroupée autour du projet.
-
+Le projet IzPack est un projet open-source membre de la fondation Codehaus.
+A ce titre, le code source est librement accessible selon les termes de la licence. De plus, une communauté s'est créée autour du projet.
 \subsubsection{Codehaus}
 Codehaus est une fondation dédiée au développement de projets open-source.
 A ce titre, elle propose une plateforme pour aider au développement de ces projets avec un certain nombre d'outils fournis par des sponsors.
@@ -36,39 +35,37 @@ Dans le cas de IzPack, le despote est Julien Ponge.
 Cette communauté open-source fait vivre et évoluer le projet.
 Les personnes rejoignant le projet sont des personnes aux motivations diverses.
 Ces personnes peuvent être des passionnés intéressés par le projet ou des salariés utilisant IzPack et apportant leurs contributions.
-Ces formes de contributions sont variées, elles peuvent prendre la forme d'aide aux utilisateurs, de rédaction de documentation, de correction de bugs ou d'ajouts de fonctionnalités.
+Ces formes de contributions sont variées, elles peuvent prendre la forme d'aide aux utilisateurs, de rédaction de documentations, de correction de bugs ou d'ajouts de fonctionnalités.
 
 \subsubsection{Licence Apache 2}
 IzPack est sous licence Apache 2. Cette licence permet l'accès au code source et l'utilisation libre du logiciel.
-Il est tout à fait possible de l'utiliser pour une application commerciale, voire même de modifier IzPack pour le faire correspondre à ses besoins.
-
-Si un développeur apporte des modifications utiles, il est encouragé à en faire profiter la communauté, mais ce n'est pas une obligation.
+Il est tout à fait possible de l'utiliser pour une application commerciale, voire même de modifier IzPack pour le faire correspondre à ses besoins. Si un développeur apporte des modifications utiles, il est encouragé à en faire profiter la communauté, mais ce n'est pas une obligation.
 
 \subsection{Fonctionnalités}
 IzPack est un système modulaire, il possède de nombreuses fonctionnalités pour créer un installateur adapté à chacun.
 
 \subsubsection{Multi-plateforme}
 L'installateur généré par IzPack est un jar (java archive).
-Il suffit donc que la machine ait une machine virtuelle pour pouvoir lancer l'installation, indépendamment de la plateforme ou du système d'exploitation.
-Il est néanmoins possible de faire des traitements spécifiques à certaines plateformes, par exemple modifier la base de registre sous Windows, modifier le PATH sous Linux...
+Il suffit donc que la machine ait une machine virtuelle Java pour pouvoir lancer l'installation, indépendamment de la plateforme ou du système d'exploitation.
+Il est néanmoins possible de faire des traitements spécifiques à certaines plateformes, par exemple modifier la base de registre sous Windows, modifier le PATH...
 Il est également possible de convertir l'installateur pour être spécifique à une plateforme.
 
 \subsubsection{Personnalisation}
 Chaque écran que verra l'utilisateur est décrit par un panel.
-Un ensemble de panels composent l'installateur graphique et chaque panels remplit une fonction spécifique.
-L'aspect global de l'installateur et celui des panels est personnalisable par l'utilisateur via le descripteur XML.
+Un ensemble de panels composent l'installateur graphique et chaque panel remplit une fonction spécifique.
+L'aspect global de l'installateur et celui des panels est personnalisable via le descripteur XML.
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=0.3\textwidth]{../dia/included/install/02.png}
-	\includegraphics[width=0.3\textwidth]{../dia/included/install/05.png}
-	\includegraphics[width=0.3\textwidth]{../dia/included/install/06.png}
+	\includegraphics[width=0.32\textwidth]{../dia/included/install/02.png}
+	\includegraphics[width=0.32\textwidth]{../dia/included/install/05.png}
+	\includegraphics[width=0.32\textwidth]{../dia/included/install/06.png}
 	\caption{Exemple de panels disponibles avec IzPack}
 	\label{fig:panelGlass}
 \end{figure}
-Il existe de nombreux types de panels : des panel pour accueillir l'utilisateur et lui afficher des informations (HelloPanel et HTMLInfoPanel), d'autres pour demander à l'utilisateur des informations (UserInputPanel), etc.
+Il existe de nombreux types de panels : des panels pour accueillir l'utilisateur et lui afficher des informations (HelloPanel et HTMLInfoPanel), d'autres pour lui demander des informations (UserInputPanel), etc.
 
-Sur la figure~\ref{fig:panelGlass}, on peut voir un HTMLInfoPanel, un UserInputPanel et un InstallPanel pour l'installation de Glassfish.
-Il existe aussi des panels plus spécialisés comme CompilePanel qui permet de compiler du code java et ProcessPanel qui permet de lancer des programmes après l'installation.
+Sur la figure~\ref{fig:panelGlass}, on peut voir un HTMLInfoPanel, un UserInputPanel et un InstallPanel, tout trois provenant de l'installation de Glassfish.
+Il existe aussi des panels plus spécialisés comme CompilePanel qui permet de compiler du code Java et ProcessPanel qui permet de lancer des programmes après l'installation.
 
 \subsubsection{Internationalisation}
 IzPack supporte la création d'installateurs multilangues (voir figure \ref{fig:LangChoice}).
@@ -82,7 +79,7 @@ Si une langue n'existe pas, il suffit de traduire le dictionnaire correspondant 
 \end{figure}
 
 \subsubsection{Installation automatique}
-A la fin de l'installation, il est possible de générer un script d'installation automatique comme montré figure \ref{fig:SaveInstallXML}.
+A la fin de l'installation, il est possible de générer un script d'installation automatique (figure~\ref{fig:SaveInstallXML}).
 Ce script permet de reproduire l'installation qui vient d'être réalisée sur d'autres machines.
 \begin{figure}[H]
 	\centering
@@ -91,7 +88,7 @@ Ce script permet de reproduire l'installation qui vient d'être réalisée sur d
 	\label{fig:SaveInstallXML}
 \end{figure}
 \subsection{Popularité du projet}
-IzPack est utilisé dans de grand projets comme Jboss, Xwiki, Glassfish... Des entreprises également l'utilisent pour leurs propres applications. A l'heure actuelle, les téléchargements mensuels s'élèvent à 25 000.
+IzPack est utilisé dans de grands projets comme Jboss, Xwiki, Glassfish... Des entreprises l'utilisent également pour leurs propres applications. A l'heure actuelle, les téléchargements mensuels s'élèvent à 25 000.
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=0.6\textwidth]{../image/telechargements.png}
@@ -132,7 +129,7 @@ Cette phase, illustrée par la figure \ref{fig:partie_install}, va permettre de 
 %---------------------------------------------------------
 \section{Exemple d'installation}
 Des exemples complets de génération d'installation existent.
-Il suffit de récupérer les sources d'un projet open-source utilisant IzPack comme IzPack lui-même, Glassfish, PerfSonar, Xwiki... 
+Il suffit de récupérer les sources d'un projet open-source utilisant IzPack comme Glassfish, PerfSonar, Xwiki, IzPack lui-même... 
 Pour illustrer simplement l'utilisation de IzPack, utilisons plutôt le petit exemple fourni avec le code de l'application.
 \subsection{Description du XML}
 Ce XML (install.xml) décrit complètement l'installation.
@@ -169,7 +166,7 @@ Les panels visibles par l'utilisateur sont décrits dans la balise \verb|panels|
 	<panel classname="FinishPanel"/>
 </panels>
 \end{lstlisting}
-Enfin la balise \verb|packs| contient la description des paquets (les différentes parties, optionnelles ou non, de l'application) à installer.
+Enfin la balise \verb|packs| contient la description des paquets, les différentes parties (optionnelles ou non) de l'application à installer.
 \begin{lstlisting}[language=XML]
 <packs>
 	<pack name="Base" required="yes">
@@ -183,11 +180,11 @@ Enfin la balise \verb|packs| contient la description des paquets (les différent
 	...
 </packs>
 \end{lstlisting}
-Bien sûr d'autres options existent, mais celles présentées ici suffisent à créer notre installateur.
-Les fichiers référencés doivent être présents au chemin indiqué par le XML lors de la compilation.
+D'autres options existent, mais celles présentées ici suffisent à créer notre installateur.
+Les fichiers référencés doivent être présents dans le chemin indiqué par le XML lors de la compilation.
 \subsection{Génération du jar}
 Pour générer notre installateur, il suffit de lancer la commande suivante : (l'exécutable \verb|compile| provient de IzPack)
-\begin{verbatim}
+\begin{lstlisting}[language=text]
 $ compile install.XML
 .::  IzPack - Version 4.1.0 ::.
 
@@ -197,7 +194,7 @@ $ compile install.XML
 - Visit http://izpack.org/ for the latest releases
 - Released under the terms of the Apache Software License version 2.0.
 
--> Processing  : install.XML
+-> Processing  : install.xml
 -> Output      : install.jar
 -> Base path   : .
 -> Kind        : standard
@@ -208,7 +205,7 @@ $ compile install.XML
 ...
 
 Build time: Tue Mar 10 16:50:27 CET 2009
-\end{verbatim}
+\end{lstlisting}
 Cette exécution va produire un fichier install.jar : notre installateur.
 \subsection{Installation}
 Il suffit désormais de lancer le jar pour installer notre application.
@@ -220,7 +217,7 @@ Il suffit désormais de lancer le jar pour installer notre application.
 
 \subsection{Installation automatique}
 En lançant l'installateur avec un script d'installation automatisée en paramètre, l'installation est rejouée à l'identique automatiquement.
-\begin{verbatim}
+\begin{lstlisting}[language=]
 $ java -jar install.jar automated.xml
 [ Starting automated installation ]
 [ Starting to unpack ]
@@ -230,15 +227,15 @@ $ java -jar install.jar automated.xml
 [ Unpacking finished ]
 [ Writing the uninstaller data ... ]
 [ Automated installation done ]
-\end{verbatim}
+\end{lstlisting}
 
  %---------------------------------------------------------
 \section{Problèmes actuels}
 IzPack possède, comme tout logiciel, des bugs potentiels ou des améliorations à effectuer.
 
 \subsection{Code obsolète}
-IzPack a débuté en 2001.
-A cette époque, la Jdk en était à la version 1.2. Il y avait donc des fonctionnalités absentes comme la généricité.
+Le projet IzPack a débuté en 2001.
+A cette époque, la Jdk en était à la version 1.2, et nombre de fonctionnalités absentes comme la généricité.
 On trouve ainsi, encore maintenant, du code utilisant de vieilles structures de données (des tableaux d'objets ou des Vectors) ou des styles de programmation abandonnés.
 
 \subsection{NanoXML}
@@ -246,6 +243,6 @@ Une amélioration possible concerne la gestion des XML, qui ont une grande impor
 L'absence de processeur XML intégré à la JRE 1.2 a forcé l'utilisation d'une librairie externe pour traiter les documents XML.
 IzPack se base donc sur une telle librairie : NanoXML.
 
-Cette librairie n'est malheureusement plus mise à jour (la dernière mise à jour date de 2003) et possède un certain nombre de bugs.
-De plus, l'environnement java (JRE) possède depuis la version 1.4 une bibliothèque native pour gérer les XML.
-Se débarrasser de la dépendance à NanoXML et se reposer uniquement sur la JRE permettrait donc non seulement de rendre la gestion des XML plus sûre et robuste, mais également de diminuer la taille des installateurs générés.
+Cette librairie n'est malheureusement plus mise à jour (la dernière mise à jour date de 2003) et un certain nombre de bugs perdurent.
+De plus, l'environnement Java (JRE) possède depuis la version 1.4 une bibliothèque native pour gérer les XML.
+Se débarrasser de la dépendance à NanoXML et se reposer uniquement sur la JRE permettrait non seulement de rendre la gestion des XML plus sûre et plus robuste, mais également de diminuer la taille des installateurs générés.
