--- a/latex/partie2.tex
+++ b/latex/partie2.tex
@@ -1,9 +1,9 @@
-Pour diriger et faciliter l'évolution du projet, un certain nombre d'outils et de méthodes ont été mis en place au début du projet.
+Pour diriger et faciliter l'évolution du projet, un certain nombre d'outils et de méthodes ont été mis en place.
 L'environnement avait pour but de permettre un développement agile.
 On peut distinguer 3 parties : la gestion du projet, la gestion des sources et les outils de développements.
 \section{Planification et gestion de projet}
 La méthode agile préconise des itérations courtes avec des objectifs clairs et concis à réaliser à chaque itération.
-A la fin d'une itération, un point était fait avec le client pour définir les objectifs pour la prochaine itération, le ``client'' ici étant notre tuteur, Julien Ponge.
+A la fin d'une itération, un point était fait avec le client pour définir les objectifs pour la prochaine itération, le ``client'' étant notre tuteur, Julien Ponge.
 Nous avons utilisé un outil pour gérer ces objectifs et ces itérations, il s'agit de LightHouse.
 
 \subsection{Lighthouse}
@@ -12,14 +12,14 @@ Il se présente sous la forme d'une application web et propose toutes les foncti
 On peut distinguer deux entités principales, les tickets et les sprints.
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=0.6\textwidth]{../image/lighthouse.png}
+	\includegraphics[width=0.7\textwidth]{../image/lighthouse.png}
 	\caption{Page d'accueil de Lighthouse}
 \end{figure}
 
 \subsection{Ticket}
-Les Tickets représentent un objectif à réaliser.
+Les tickets représentent un objectif à réaliser.
 Ils peuvent être créés par n'importe quel participant au projet.
-Ce ticket peut ensuite être assigné à une personne et possède plusieurs états comme vu sur la figure~\ref{fig:workflow}.
+Ce ticket peut ensuite être assigné à une personne et possède plusieurs états (figure~\ref{fig:workflow}).
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=0.2\textwidth]{../image/lighthouseWorkFlow.png}
@@ -35,7 +35,7 @@ Pour le projet, la durée d'un sprint était généralement de 1 ou 2 semaines.
 A chaque fin de sprint, une réunion était organisée pour discuter des résultats, des reports à effectuer ou des objectifs à réaliser pour le prochain sprint.
 
 % ----------------------------------------------------
-\section{Gestionnaire des sources}
+\section{Gestionnaires de sources}
 \subsection{Gestionnaire de versions}
 Tout projet informatique conséquent se doit d'être sous gestionnaire de version.
 En effet, un gestionnaire de version permet de suivre l'évolution du code source dans le temps.
@@ -44,10 +44,10 @@ De plus, il facilite le travail collaboratif.
 En effet, les développeurs travaillant de manière indépendante sur leur version du programme, la mise en commun est prise en charge par le gestionnaire.
 Il permet alors de résoudre les conflits et de fusionner les fichiers modifiés.
 
-IzPack étant un projet open-source actif, de nombreuses modifications étaient appliquées régulièrement.
+IzPack étant un projet open-source actif, de nombreuses modifications sont appliquées régulièrement.
 Il fallait donc pouvoir travailler en parallèle des changements opérés par les contributeurs et pouvoir appliquer facilement nos modifications le jour venu.
 
-Le dépôt de référence d'IzPack est un dépôt Subversion, les contributeurs y appliquent leurs modifications.
+Le dépôt de référence d'IzPack est un dépôt Subversion; Les contributeurs y appliquent leurs modifications.
 Cependant, pour des raisons de facilité et pour ne pas perturber le développement, il a été décidé de travailler sur un fork Git plutôt que sur le dépôt subversion.
 \subsection{Git}
 Git est un gestionnaire de version récent. Il a été créé en 2004 par Linus Torvald pour remplacer BitKeeper, l'ancien gestionnaire de version du noyau linux.
@@ -58,14 +58,13 @@ C'est de cet aspect distribué que provient une grande partie de la puissance de
 Un utilisateur a accès à l'historique entier du dépôt une fois qu'il a cloné le dépôt.
 Il peut effectuer toutes les operations voulues sur son dépôt en étant déconnecté et chaque clone est une sauvegarde intégrale du dépôt.
 Ainsi, n'importe quel développeur a accès à toutes les fonctionnalités d'un gestionnaire de version même si il est totalement isolé.
-La communication entre dépôts Git se faisant soit par le protocole ssh, https, ftp, rsync ou par le protocole git.
+La communication entre dépôts Git se faisant par le moyen qu'on souhaite (ssh, https, ftp, rsync, protocole git...).
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=0.7\textwidth]{../image/git.png}
 	\caption{Gestion distribuée des sources avec Git}
 \label{fig:workflow}
 \end{figure}
-
 
 Git se démarque également sur des fonctionnalités évoluées.
 L'un de ses principaux points forts est la gestion des branches.
@@ -74,38 +73,37 @@ La création, suppression et fusion des branches est remarquable de simplicité 
 Julien Ponge entretient un dépôt Git synchronisé par rapport au dépôt officiel subversion.
 Nous avons travaillé sur un fork de ce dépôt.
 Nous pouvions à tout moment synchroniser notre dépôt par rapport au dépôt d'origine et ainsi, appliquer toutes les modifications des contributeurs à notre dépôt.
-Cela permettait de préparer l'application de nos modifications de manière aisée. Tout ces dépôts sont hébergés sur GitHub.
-
+Cela permettait de préparer la fusion de nos modifications de manière aisée. 
 \subsection{GitHub}
 GitHub est une plateforme collaborative gratuite hébergeant des dépôts Git.
 Cette plateforme permet de créer, dupliquer, supprimer ou consulter des dépôts Git.
-Toutes les réalisations faites sont ouvertes et disponibles à tout le monde : n'importe qui est libre de consulter, cloner ou de forker les projets présents sur GitHub.
-Cependant, le droit de commit est restreint aux utilisateurs choisies.
+Toutes les réalisations faites sont ouvertes et disponibles à tout le monde : n'importe qui est libre de consulter, de cloner ou de forker les projets présents sur GitHub.
+Cependant, le droit de modifier le dépôt est restreint aux utilisateurs choisis.
 Il est également possible de créer des dépôts privés sous conditions de payer un abonnement.
 
 De nombreux projets utilisent GitHub comme plateforme, notamment rails, Rspec, scriptaculous...
 
 Cette plateforme a été choisie par Julien Ponge pour héberger son dépôt Git.
-Nous avons donc créés des comptes sur GitHub et avons forké le projet.
+Nous avons donc créé des comptes sur GitHub et avons forké le projet.
 L'utilisation d'un dépôt public basé sur celui de Julien Ponge a permis non seulement de faciliter les mises à jour, mais également de lui permettre de suivre facilement notre travail.
 
 \section{Outils de développement}
 \subsection{IntelliJ Idea}
 IntelliJ est un environnement de développement intégré similaire à Eclipse.
-Il est propriétaire et nécessite une licence pour son fonctionnement.
+En revanche, il est propriétaire et nécessite une licence pour son fonctionnement.
 Cependant, JetBrain, l'éditeur de IntelliJ, a une politique d'ouverture pour les projets open-source.
 Les projets membres des fondations Codehaus ou Apache bénéficient d'une licence dédiée et gratuite.
 
 Il présente certaines divergences avec des IDE comme Eclipse et NetBeans.
 Il possède une plus grande variété de fonctionnalités et l'intégration d'un grand nombre de composants.
-On trouve ainsi l'intégration de frameworks récents comme GWT ou d'outils comme Git.
+On retrouve ainsi l'intégration de frameworks récents comme GWT ou d'outils comme Git.
 L'intégration de Maven est également très complète.
-De plus, ses capacités de modification de code (refactoring) sont au dessus de celles des autres IDE : préservation de la casse lors d'un renommage, etc.
+De plus, ses capacités de modification de code (refactoring) sont au dessus de celles des autres IDE : extraction de méthodes, introduction de variables, etc...
 
 \subsection{Yourkit}
 %Profiler Java
 %-> Temps, nombres d'appels des méthodes
 %-> Affichage de la charge a tout moment
-Yourkit est un outil de profiling. Il permet d'avoir un rapport détaillé sur l'utilisation des ressources par le programme. On peut ainsi récupérer le nombre d'appel à une méthode, le temps passé dans une méthode, l'utilisation des ressources à un temps donné.
+Yourkit est un outil de profiling. Il permet d'avoir un rapport détaillé sur l'utilisation des ressources par le programme. On peut ainsi récupérer le nombre d'appels à une méthode, le temps passé dans une méthode, l'utilisation des ressources à un temps donné.
 
-Le but du profiling a été de repérer les optimisations possibles sur les modifications que l'on a opéré.
+Le but du profiling a été de repérer les optimisations possibles sur les modifications que nous avons réalisé.
